--- a/todo-app/todo-backend/docker-compose.dev.yml
+++ b/todo-app/todo-backend/docker-compose.dev.yml
@@ -1,4 +1,22 @@
 services:
+  todo-backend-dev:
+    container_name: todo-backend-dev
+    image: todo-backend-dev
+    build:
+      context: .
+      dockerfile: dev.Dockerfile
+    volumes:
+      - ./app.js:/usr/src/app/app.js
+      - ./mongo:/usr/src/app/mongo
+      - ./util:/usr/src/app/util
+      - ./routes:/usr/src/app/routes
+      - ./package.json:/usr/src/app/package.json
+    ports:
+      - 3000:3000
+    environment: 
+      - PORT=3000
+      - REDIS_URL=redis://redis:6379
+      - MONGO_URL=mongodb://the_username:the_password@mongo:27017/the_database
   mongo:
     image: mongo
     ports:
