--- a/todo-app/nginx.dev.conf
+++ b/todo-app/nginx.dev.conf
@@ -10,6 +10,16 @@ http {
       proxy_set_header Connection 'upgrade';
       
       proxy_pass http://frontend:5173;
+
+      # Requests starting with /api/ are handled
+      # 
+      # IMPORTANT
+      # Even though the browser will send a GET request to /api/todos/1
+      # we want the Nginx to proxy the request to /todos/1.
+      # Do this by adding a trailing slash / to the URL at the end of proxy_pass.
+      location /api/ {
+        proxy_pass http://backend:3000/; # Trailing slash
+      }
     }
   }
 }
