--- a/todo-app/docker-compose.dev.yml
+++ b/todo-app/docker-compose.dev.yml
@@ -1,6 +1,9 @@
 services:
   frontend:
     image: todo-front-dev
+    container_name: todo-front-dev
+    environment:
+      - VITE_BACKEND_URL=http://localhost:8080/api
     volumes:
       - ./todo-frontend/:/usr/src/app/
   nginx:
@@ -12,3 +15,34 @@ services:
     container_name: todo-reverse-proxy-dev
     depends_on:
       - frontend
+  mongo:
+    image: mongo
+    container_name: todo-mongo-dev
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: example
+      MONGO_INITDB_DATABASE: the_database
+    volumes:
+      - ./todo-backend/mongo/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js
+      - ./todo-backend/mongo_data:/data/db
+  redis:
+    image: redis
+    container_name: todo-redis-dev
+    command: ['redis-server', '--appendonly', 'yes']
+    volumes:
+      - ./todo-backend/redis_data:/data
+  backend:
+    image: todo-backend-dev
+    container_name: todo-backend-dev
+    volumes:
+      - ./todo-backend/app.js:/usr/src/app/app.js
+      - ./todo-backend/mongo:/usr/src/app/mongo
+      - ./todo-backend/util:/usr/src/app/util
+      - ./todo-backend/routes:/usr/src/app/routes
+    environment:
+      - PORT=3000
+      - REDIS_URL=redis://redis:6379
+      - MONGO_URL=mongodb://the_username:the_password@mongo:27017/the_database
+    depends_on:
+      - mongo
+      - redis
