--- a/todo-app/todo-frontend/Dockerfile
+++ b/todo-app/todo-frontend/Dockerfile
@@ -2,14 +2,15 @@ FROM node:20 as base
 WORKDIR /usr/src/app
 COPY --chown=node:node . .
 
-FROM base as install-stage
-RUN npm ci
-
 FROM base as test-stage
-COPY --from=install-stage /usr/src/app/node_modules /usr/src/app/node_modules
+RUN npm ci
 RUN npm run test
 
-FROM base as run-stage
+FROM base as build-stage
 COPY --from=test-stage /usr/src/app/node_modules /usr/src/app/node_modules
-ENV VITE_BACKEND_URL=http://localhost:3000
-CMD ["npm", "run", "dev", "--", "--host"]
+ENV VITE_BACKEND_URL=http://localhost:8080/api
+RUN npm run build
+RUN npm prune --production
+
+FROM nginx:1.25-alpine
+COPY --from=build-stage /usr/src/app/dist /usr/share/nginx/html
